--- a/index.html
+++ b/index.html
@@ -239,10 +239,10 @@
 
         .benefits-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-            gap: 3rem;
+            grid-template-columns: 1fr 1fr 1fr;
+            gap: 2rem;
             margin-top: 4rem;
-            max-width: 900px;
+            max-width: 1100px;
             margin-left: auto;
             margin-right: auto;
         }
@@ -449,9 +449,9 @@
 
         .pricing-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            grid-template-columns: 1fr 1fr 1fr 1fr;
             gap: 1.5rem;
-            max-width: 1200px;
+            max-width: 1300px;
             margin: 0 auto;
         }
 
@@ -1121,7 +1121,7 @@
                     
                     <div class="pricing-toggle">
                         <span class="pricing-toggle-label">Trimestrale</span>
-                        <div class="pricing-toggle-switch" id="pricingToggle">
+                        <div class="pricing-toggle-switch active" id="pricingToggle">
                             <div class="pricing-toggle-slider"></div>
                         </div>
                         <span class="pricing-toggle-label">
@@ -1137,12 +1137,12 @@
                         <div class="pricing-price-container">
                             <div class="pricing-price">
                                 <span class="pricing-currency">💶</span>
-                                <span class="pricing-amount" data-monthly="49" data-annual="39">€49</span>
+                                <span class="pricing-amount" data-monthly="49" data-annual="39">€39</span>
                                 <span class="pricing-period">/mese</span>
                             </div>
                             <div class="pricing-annual">
-                                <span class="quarterly-price">Pagamento trimestrale</span>
-                                <span class="annual-price" style="display: none;">Pagamento annuale</span>
+                                <span class="quarterly-price" style="display: none;">Pagamento trimestrale</span>
+                                <span class="annual-price">Pagamento annuale</span>
                             </div>
                         </div>
                         <ul class="pricing-features">
@@ -1167,12 +1167,12 @@
                         <div class="pricing-price-container">
                             <div class="pricing-price">
                                 <span class="pricing-currency">💶</span>
-                                <span class="pricing-amount" data-monthly="89" data-annual="69">€89</span>
+                                <span class="pricing-amount" data-monthly="89" data-annual="69">€69</span>
                                 <span class="pricing-period">/mese</span>
                             </div>
                             <div class="pricing-annual">
-                                <span class="quarterly-price">Pagamento trimestrale</span>
-                                <span class="annual-price" style="display: none;">Pagamento annuale</span>
+                                <span class="quarterly-price" style="display: none;">Pagamento trimestrale</span>
+                                <span class="annual-price">Pagamento annuale</span>
                             </div>
                         </div>
                         <ul class="pricing-features">
@@ -1197,12 +1197,12 @@
                         <div class="pricing-price-container">
                             <div class="pricing-price">
                                 <span class="pricing-currency">💶</span>
-                                <span class="pricing-amount" data-monthly="149" data-annual="119">€149</span>
+                                <span class="pricing-amount" data-monthly="149" data-annual="119">€119</span>
                                 <span class="pricing-period">/mese</span>
                             </div>
                             <div class="pricing-annual">
-                                <span class="quarterly-price">Pagamento trimestrale</span>
-                                <span class="annual-price" style="display: none;">Pagamento annuale</span>
+                                <span class="quarterly-price" style="display: none;">Pagamento trimestrale</span>
+                                <span class="annual-price">Pagamento annuale</span>
                             </div>
                         </div>
                         <ul class="pricing-features">
@@ -1235,12 +1235,12 @@
                         <div class="pricing-price-container">
                             <div class="pricing-price">
                                 <span class="pricing-currency">💶</span>
-                                <span class="pricing-amount" data-monthly="229" data-annual="189">€229</span>
+                                <span class="pricing-amount" data-monthly="229" data-annual="189">€189</span>
                                 <span class="pricing-period">/mese</span>
                             </div>
                             <div class="pricing-annual">
-                                <span class="quarterly-price">Pagamento trimestrale</span>
-                                <span class="annual-price" style="display: none;">Pagamento annuale</span>
+                                <span class="quarterly-price" style="display: none;">Pagamento trimestrale</span>
+                                <span class="annual-price">Pagamento annuale</span>
                             </div>
                         </div>
                         <ul class="pricing-features">
