--- a/index.html
+++ b/index.html
@@ -207,6 +207,56 @@
             fill: currentColor;
         }
 
+        /* What is Eikado Section */
+        .what-is-eikado {
+            padding: 6rem 0;
+            background: var(--gray-50);
+        }
+
+        .what-is-eikado-header {
+            text-align: center;
+            margin-bottom: 3rem;
+        }
+
+        .what-is-eikado-header h2 {
+            font-family: 'Montaga', serif;
+            font-size: 3rem;
+            font-weight: 400;
+            color: var(--gray-900);
+            margin-bottom: 1.5rem;
+            line-height: 1.1;
+            letter-spacing: -0.025em;
+        }
+
+        .what-is-eikado-header p {
+            font-size: 1.375rem;
+            color: var(--gray-700);
+            max-width: 700px;
+            margin: 0 auto;
+            line-height: 1.4;
+            font-weight: 600;
+        }
+
+        .what-is-eikado-content {
+            max-width: 800px;
+            margin: 0 auto;
+            text-align: center;
+        }
+
+        .what-is-eikado-content p {
+            font-size: 1.125rem;
+            color: var(--gray-600);
+            line-height: 1.7;
+            margin-bottom: 2rem;
+        }
+
+        .what-is-eikado-highlight {
+            font-size: 1.25rem;
+            color: var(--gray-800);
+            font-weight: 600;
+            margin-top: 2rem;
+        }
+
         /* Why Eikado Section */
         .why-eikado {
             padding: 6rem 0;
@@ -894,6 +944,7 @@
                 font-size: 2.5rem;
             }
 
+            .what-is-eikado-header h2,
             .why-eikado-header h2,
             .features-header h2,
             .pricing-header h2,
@@ -987,7 +1038,8 @@
         <nav class="nav container">
             <a href="#" class="logo">Eikado</a>
             <ul class="nav-menu">
-                <li><a href="#perche-eikado">Perché Eikado</a></li>
+                <li><a href="#cos-e">Cos'è</a></li>
+                <li><a href="#perche-eikado">Perché</a></li>
                 <li><a href="#funzionalita">Funzionalità</a></li>
                 <li><a href="#pricing">Prezzi</a></li>
                 <li><a href="#contatti">Contatti</a></li>
@@ -1026,6 +1078,26 @@
                     </svg>
                     Guarda il Video
                 </a>
+            </div>
+        </section>
+
+        <!-- What is Eikado Section -->
+        <section class="what-is-eikado" id="cos-e">
+            <div class="container">
+                <div class="what-is-eikado-header">
+                    <h2>Cos'è Eikado</h2>
+                    <p>Un assistente che trasforma WhatsApp nel tuo calendario di prenotazioni.</p>
+                </div>
+                
+                <div class="what-is-eikado-content">
+                    <p>
+                        Con Eikado i tuoi clienti ti scrivono su WhatsApp come sempre, ma dietro le quinte tutto diventa più semplice: ricevono tre orari tra cui scegliere, confermano con un tap e trovano già il promemoria in agenda. Tu ricevi solo prenotazioni già ordinate, senza perdere tempo a gestire chiamate e messaggi.
+                    </p>
+                    
+                    <div class="what-is-eikado-highlight">
+                        👉 <strong>Funziona direttamente su WhatsApp. Niente complicazioni.</strong>
+                    </div>
+                </div>
             </div>
         </section>
 
